<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="create_task">create task</string>
    <string name="update_task">Update task</string>
    <string name="notes">Все заметки</string>
    <string name="deleted_task">Удаленные задачи</string>
    <string name="archived_task">Выполненные задачи</string>
    <string name="search">Search</string>
</resources>