<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/GroupOne"
        android:checkableBehavior="single">

        <item
            android:id="@+id/Notes"
            android:checked="true"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />
    </group>

    <group
        android:id="@+id/GroupTwo"
        android:checkableBehavior="single">

        <item
            android:id="@+id/Deleted"
            android:icon="@drawable/ic_delete"
            android:title="@string/deleted_task" />

        <item
            android:id="@+id/Archived"
            android:icon="@drawable/ic_archived"
            android:title="@string/archived_task" />
    </group>

</menu>